<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context="com.zybooks.templateapp.database.QuestionEditActivity">

    <TextView
        android:id="@+id/question_label_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_label"
        android:labelFor="@id/question_edit_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/question_edit_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/question_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintTop_toTopOf="@id/question_label_text_view"
        app:layout_constraintBottom_toTopOf="@id/answer_edit_text"
        app:layout_constraintLeft_toRightOf="@id/question_label_text_view"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/answer_label_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer_label"
        android:labelFor="@id/answer_edit_text"
        app:layout_constraintTop_toTopOf="@id/answer_edit_text"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/answer_edit_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/answer_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/question_edit_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/answer_label_text_view"
        app:layout_constraintRight_toRightOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/save_question"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>